# amupdf-nativelib

./: .gitignore  Page.java  README  README.md  build.gradle  compile.md  compile.txt  page.c  project.gradle  settings.gradle  thirdparty_build.gradle
antiword/: build.gradle
antiword/jni/: Application.mk
antiword/src/main/java/cn/archko/reader/antiword/: AntiWord.java  TestActivity.kt
antiwordModule/: README.md  build.gradle
antiwordModule/cmake/: CMakeLists.txt
antiwordModule/src/main/: AndroidManifest.xml
antiwordModule/src/main/java/com/archko/reader/antiword/: IntentFile.kt  LibAntiword.java  StatusBarHelper.java  TestActivity.java
djvuModule/: build.gradle
djvuModule/cmake/: CMakeLists.txt
djvuModule/jni/: DjvuDroidBridge.cpp  javahelpers.h
djvuModule/src/main/: AndroidManifest.xml
djvuModule/src/main/java/org/vudroid/djvudroid/codec/: DjvuDocument.java  DjvuPage.java
djvuModule/src/main/res/values/: strings.xml
mobiModule/: README.md  build.gradle
mobiModule/cmake/: CMakeLists.txt
mobiModule/src/main/: AndroidManifest.xml
mobiModule/src/main/java/com/archko/reader/mobi/: IntentFile.kt  LibMobi.java  StatusBarHelper.java  TestActivity.java
mobiModule/src/main/res/layout/: activity_test.xml
mupdfModule/: build.gradle  build.md
mupdfModule/jni/: CMakeLists.txt
mupdfModule/src/main/: AndroidManifest.xml
mupdfModule/src/main/assets/: mupdf.css
mupdfModule/src/main/java/com/archko/reader/sample/: ColorItemDecoration.java  IntentFile.kt  StatusBarHelper.java  TestActivity.java
mupdfModule/src/main/res/layout/: activity_main.xml
mupdfModule/src/main/res/values/: strings.xml
pdf-patch/: Page.java  androidfonts.c  css-apply.c  html-parse  page.c  stext-output.c
